# payment_pro

./: README.md  pyproject.toml
.github/workflows/: ci.yml
payment_pro/: hooks.py  modules.txt
payment_pro/overrides/: purchase_invoice.py  sales_invoice.py
payment_pro/payment_pro/custom/: purchase_invoice.json  purchase_invoice_item.json  purchase_taxes_and_charges.json
payment_pro/public/js/: purchase_invoice.js
