[project]
name = "payment_pro"
authors = [
    { name = "alaalsalam", email = "alaalsalam101@gmail.com"}
]
description = "A Custom app that allows advanced payment methods such as paying bills from Party, transferring between Party and Party such as customer and supplier, and other additions."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
